--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "dependencies": {},
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "start": "gulp serve",
+    "postinstall": "bower install"
   },
   "devDependencies": {
     "estraverse": "~4.1.0",
