--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "animate.css": "~3.4.0",
     "angular": "~1.4.2",
     "components-font-awesome": "^4.5.0",
-    "angular-bootstrap": "^1.2.4"
+    "angular-bootstrap": "^1.2.4",
+    "angular-google-maps": "~2.3.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
