--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "components-font-awesome": "^4.5.0",
     "angular-bootstrap": "^1.2.4",
     "angular-google-maps": "~2.3.2",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "v-accordion": "~1.6.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
