--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,9 @@
     "angular-bootstrap": "^1.2.4",
     "angular-google-maps": "~2.3.2",
     "underscore": "^1.8.3",
-    "v-accordion": "~1.6.0"
+    "v-accordion": "~1.6.0",
+    "firebase": "~2.4.2",
+    "angularfire": "~1.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
